# valdi_kisstate_test

./: AGENTS.md  BUILD.bazel  README.md  README_EN.md
valdi_modules/kisstate-valdi/: BUILD.bazel  tsconfig.json
valdi_modules/kisstate-valdi/src/: App.tsx
valdi_modules/kisstate-valdi/src/kiss-state-core/src/: index.ts
valdi_modules/kisstate-valdi/src/kiss-state-core/src/types/: index.ts
valdi_modules/kisstate-valdi/src/kiss-valdi/: index.ts
valdi_modules/kisstate-valdi/src/kiss-valdi/valdi/: index.tsx
valdi_modules/valditest1/: BUILD.bazel  tsconfig.json
valdi_modules/valditest1/src/: App.tsx  index.ts
valdi_modules/valditest1/src/kiss-state-core/src/: store.ts
valdi_modules/valditest1/src/kiss-state-core/src/decorators/: index.ts
valdi_modules/valditest1/src/kiss-state-core/src/scheduler/: index.ts
valdi_modules/valditest1/src/kiss-valdi/: index.ts
valdi_modules/valditest1/src/kiss-valdi/test/: index.ts
